updated hyfetch specs

--- a/hyfetch.html
+++ b/hyfetch.html
@@ -306,16 +306,16 @@ span { display:inline; }
 <span style="color:rgb(246,170,183)">                `+oooo:               </span>  -------------
 <span style="color:rgb(246,170,183)">               `+oooooo:              </span>  <span class="f6"><span class="bold">OS</span></span>: Arch Linux x86_64
 <span style="color:rgb(246,170,183)">               -+oooooo+:             </span>  <span class="f6"><span class="bold">Kernel</span></span>: Linux-Zen
-<span style="color:rgb(246,170,183)">             `/:-:++oooo+:            </span>  <span class="f6"><span class="bold">Shell</span></span>: fish 3.5.1
+<span style="color:rgb(246,170,183)">             `/:-:++oooo+:            </span>  <span class="f6"><span class="bold">Shell</span></span>: fish
 <span style="color:rgb(255,255,255)">            `/++++/+++++++:           </span>  <span class="f6"><span class="bold">Resolution</span></span>: 1920x1080 @ 60.00Hz, 1680x1050 @ 59.97Hz 
 <span style="color:rgb(255,255,255)">           `/++++++++++++++:          </span>  <span class="f6"><span class="bold">WM</span></span>: i3 
 <span style="color:rgb(255,255,255)">          `/+++ooooooooooooo/`        </span>  <span class="f6"><span class="bold">Terminal</span></span>: Alacritty
 <span style="color:rgb(255,255,255)">         ./ooosssso++osssssso+`       </span>  <span class="f6"><span class="bold">Mouse</span></span>: B A90
 <span style="color:rgb(255,255,255)">        .oossssso-````/ossssss+`      </span>  <span class="f6"><span class="bold">Keyboard</span></span>: KU-0316
 <span style="color:rgb(246,170,183)">       -osssssso.      :ssssssso.     </span>  <span class="f6"><span class="bold">Drink</span></span>: Tea; green with jasmin
-<span style="color:rgb(246,170,183)">      :osssssss/        osssso+++.    </span>  <span class="f6"><span class="bold">CPU</span></span>: Intel i3-3240 (4) @ 3.4GHz
-<span style="color:rgb(246,170,183)">     /ossssssss/        +ssssooo/-    </span>  <span class="f6"><span class="bold">GPU</span></span>: NVIDIA Quadro K2200 
-<span style="color:rgb(246,170,183)">   `/ossssso+/:-        -:/+osssso+-  </span>  <span class="f6"><span class="bold">Memory</span></span>: 13.62 GiB @ 1333MHz DDR3
+<span style="color:rgb(246,170,183)">      :osssssss/        osssso+++.    </span>  <span class="f6"><span class="bold">CPU</span></span>: AMD Ryzen 5 5500 (12) @ 3.6GHz
+<span style="color:rgb(246,170,183)">     /ossssssss/        +ssssooo/-    </span>  <span class="f6"><span class="bold">GPU</span></span>: NVIDIA GeForce RTZ 2060
+<span style="color:rgb(246,170,183)">   `/ossssso+/:-        -:/+osssso+-  </span>  <span class="f6"><span class="bold">Memory</span></span>: 16GB DDR4
 <span style="color:rgb(85,205,253)">  `+sso+:-`                 `.-/+oso: </span>  <span class="f0 b0">   <span class="f1 b1">   <span class="f2 b2">   <span class="f3 b3">   <span class="f4 b4">   <span class="f5 b5">   <span class="f6 b6">   <span class="f7 b7">   </span></span></span></span></span></span></span></span>
 <span style="color:rgb(85,205,253)"> `++:.                           `-/+/</span>  <span class="ef8"><span class="eb8">   <span class="ef9"><span class="eb9">   <span class="ef10"><span class="eb10">   <span class="ef11"><span class="eb11">   <span class="ef12"><span class="eb12">   <span class="ef13"><span class="eb13">   <span class="ef14"><span class="eb14">   <span class="ef15"><span class="eb15">   </span></span></span></span></span></span></span></span></span></span></span></span></span></span></span></span>
 <span style="color:rgb(85,205,253)"> .`                                 `/</span>
